# iaifi-hack-DA

./: .gitignore  Train_DA.ipynb  Train_DA.py  pyproject.toml  requirements.txt
checkpoints/: best_model_DA_loss.pt  best_model_classification_loss.pt  best_model_total_val_loss.pt  best_model_val_acc.pt  best_model_val_f1.pt
results/: output_best_model.yaml
results/y_pred/: y_pred_best_model_classification_loss.npy
src/: test.py  test_notsidda.py
src/AD/: architectures.py  constants.py  eval.py  presets.py  train.py  trainer.py
src/AD/custom_datasets/: BTS.py  ZTF_sims.py
src/AD/utils/: ELAsTiCC_combine_class_parquet.py  ELAsTiCC_fits_to_parquet.py  ZTF_sim_combine_class_parquet.py  ZTF_sim_fits_to_parquet.py  bts_csv_to_parquet.py  split_parquet.py
