[project]
name = "AD"
version = "1.0.0"
description = "A package for real time classification and anomaly detection"
authors = [
  { name="Ved Shah"},
]
readme = "README.md"
dependencies = [
    "astropy==7.0.1",
    "graphviz==0.20.3",
    "matplotlib==3.10.1",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "polars==0.20.31",
    "scipy==1.15.2",
    "Jinja2==3.1.6",
    "datasets==3.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "wandb==0.20.1",
    "scikit-learn==1.6.1",
    "umap-learn==0.5.8",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
AD-train = "AD.train:main"
AD-test = "AD.test:main"